<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="kmitl.lab03.pimpavee58070101.Fragment.EditDotFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="125dp"
            android:ems="10"
            android:hint="@string/size"
            android:inputType="number"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/positionYEditText"
            android:layout_width="100dp"
            android:layout_height="43dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/positiony"
            android:inputType="number"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/positionXEditText"
            app:layout_constraintLeft_toRightOf="@+id/positionXEditText"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.558" />

        <EditText
            android:id="@+id/positionXEditText"
            android:layout_width="100dp"
            android:layout_height="43dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="39dp"
            android:ems="10"
            android:hint="@string/positionx"
            android:inputType="number"
            app:layout_constraintHorizontal_bias="0.212"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="77dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="107dp" />

        <Button
            android:id="@+id/buttonConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="107dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="75dp"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toRightOf="@+id/buttonCancel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/buttonCancel"
            android:layout_marginTop="8dp"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/buttonColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonConfirm"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/positionYEditText"
            app:layout_constraintVertical_bias="0.571" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
