<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="kmitl.lab03.pimpavee58070101.Fragment.DotViewFragment">

    <!-- TODO: Update blank fragment layout -->


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/buttonClear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            tools:layout_editor_absoluteY="447dp"
            tools:layout_editor_absoluteX="16dp" />

        <Button
            android:id="@+id/buttonRandom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/buttonClear"
            app:layout_constraintRight_toLeftOf="@+id/buttonShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/random_dot"
            tools:layout_editor_absoluteY="447dp"
            tools:layout_editor_absoluteX="135dp" />

        <kmitl.lab03.pimpavee58070101.view.DotView
            android:id="@+id/dotView"
            app:layout_constraintBottom_toTopOf="@+id/buttonRandom"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="0dp"
            android:background="@android:color/white" />

        <Button
            android:id="@+id/buttonShare"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="8dp"
            android:text="@string/share"
            android:layout_marginBottom="0dp" />
    </android.support.constraint.ConstraintLayout>

</FrameLayout>
